# ce221-virtual-function-word-filter

./: CMakeLists.txt  DN18657_Assignment2.7z  README.md
ex1/: Student.cpp  Student.h  main.cpp  marks.txt  oldCmake.txt
ex2/: DerivedOne.cpp  DerivedOne.h  DerivedThree.cpp  DerivedThree.h  DerivedTwo.cpp  DerivedTwo.h  ReadFilteredWords.cpp  ReadWords.cpp  ReadWords.h  main.cpp  test.txt
